Fix margin of links in forms on mobile

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ textarea { width: 100%; }
 form a {
 	display: inline-block;
 	width: 8em;
-	margin-right: 0.8em;
+	margin: 0 0.8em 0.8em 0;
 }
 
 @media screen and (max-width: 700px) {
